[tool.poetry]
name = "python-gvm-demo"
version = "0.1.0"
description = ""
authors = ["joscha"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.0"
python-gvm = {git = "https://github.com/joscha-png/python-gvm"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
